[Fix]: Height of search box on mobile screen

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -38,6 +38,7 @@
   .search,
   .search > .input-textbox {
     width: 100%;
+    height: auto;
   }
 
   .input-textbox {
